force-app/main/default/objects/Contractor_Changes__c/Contractor_Changes__c.object-meta.xml
<CustomObject>
    <label>Contractor Change</label>
    <nameField>
        <label>Contractor Changes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractor Change</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>