force-app/main/default/objects/Contractor_Changes__c/fields/Budget_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Budget_Percentage__c</fullName>
    <label>Budget Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>