force-app/main/default/objects/Contractor_Changes__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Contractor__c</referenceTo>
    <relationshipLabel>Contractor Change</relationshipLabel>
    <relationshipName>Contractor_Change</relationshipName>
    <type>Lookup</type>
</CustomField>