force-app/main/default/objects/Contractor_Changes__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contractor Change</relationshipLabel>
    <relationshipName>Contractor_Change</relationshipName>
    <type>Lookup</type>
</CustomField>